Removed comments and fix spacing issues in index, css and js files.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@
     /* gap: 1rem; */
 }
 
-h1{
+.container > h1{
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-size: 2rem;
